# julsvor-currency-exchange-app

./: LICENSE  README.md
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  server.rs
