[package]
name = "currency-exchange-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "currency_exchange_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = {version = "2", features = ["json"] }
base64 = "0.22.1"
dotenv = "0.15.0"
axum = "0.8.1"
tokio = "1.43.0"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
phf = "0.11.3"
sqlite = "0.36.1"

